--- a/themes/default/staff/search.html
+++ b/themes/default/staff/search.html
@@ -200,7 +200,7 @@
                                     <tr>
                                         <th width="1%" scope="col">ID</th>
                                         <th width="10%" scope="col">Employee ID</th>
-                                        <th width="10%" scope="col">Type</th>
+                                        <th width="15%" scope="col">Type</th>
                                         <th width="10%" scope="col">NIC</th>
                                         <th width="5%" scope="col">Gender</th>
                                         <th scope="col">Name</th>
@@ -219,7 +219,7 @@
                                             <td>{{ staff.gender }}</td>
                                             <td>{{ staff.name }}</td>
                                             <td>{{ staff.mobile }}</td>
-                                            <td  class="text-right"><a href="{{ app.url }}/staff/profile/{{ staff.id }}"><button type="button" class="btn btn-xs btn-success"><i class="la la-user"></i>View Profile</button></a></td>
+                                            <td  class="text-right"><a href="{{ app.url }}/staff/profile/{{ staff.id }}"><button type="button" class="btn btn-sm btn-success"><i class="la la-user"></i> View Profile </button></a></td>
                                         </tr>
                                     {% endfor %}
                                 </tbody>
