staff prodile modification

--- a/themes/default/staff/profile.html
+++ b/themes/default/staff/profile.html
@@ -28,6 +28,7 @@
                                             <div class="media-body align-self-center">
                                                 <h5 class="my-0">{{ staff.initials }} {{ staff.surname }}</h5>
                                                 <h6 class="my-0 text-secondary">{{ staff.type }}</h6>
+                                                <i class="la la-edit"></i>
                                             </div>
                                         </div>
                                     </div>
@@ -39,7 +40,6 @@
                                             <li class="nav-item">
                                                 <a class="nav-link active" id="about-tab" data-toggle="tab" href="#about" role="about" aria-controls="about" aria-selected="true">About</a>
                                             </li>
-
                                             <li class="nav-item">
                                                 <a class="nav-link" id="tools-tab" data-toggle="tab" href="#tools" role="tab" aria-controls="tools" aria-selected="false">Settings</a>
                                             </li>
