partially implemented message inbox

--- a/themes/default/messages/single.html
+++ b/themes/default/messages/single.html
@@ -18,7 +18,7 @@
 
 					<div class="card mt-5">
 						<div class="card-header">
-							<img src="https://pbs.twimg.com/profile_images/915314874212868096/pn-v8Ru7_400x400.jpg" class="avatar">
+							<img src="{{ app.url }}/data/propic/student/53" class="avatar">
 							<h5>
 								Srivin Prabhash
 							</h5>
@@ -26,24 +26,23 @@
 
 						<div id="messages-wrapper" class="card-body">
 							
-
-							<div class="media single-msg incoming">
-								<img class="avatar mr-3" src="https://pbs.twimg.com/profile_images/915314874212868096/pn-v8Ru7_400x400.jpg" alt="Generic placeholder image">
-								<div class="media-body">
-									<p>
-										Cras sit amet nibh libero, in gravida nulla. Nulla vel metus scelerisque ante sollicitudin. Cras purus odio, vestibulum in vulputate at, tempus viverra turpis. Fusce condimentum nunc ac nisi vulputate fringilla. Donec lacinia congue felis in faucibus.
-									</p>
+							{% for message in messages %}
+								{% if message.owner == true %}
+								<div class="media single-msg incoming">
+									<img class="avatar mr-3" src="{{ app.url }}/data/propic/student/53" alt="Generic placeholder image">
+									<div class="media-body">
+										<p>{{ message.body }}</p>
+									</div>
 								</div>
-							</div>
-
-							<div class="media single-msg">
-								<img class="avatar mr-3" src="https://res.cloudinary.com/practicaldev/image/fetch/s--7Cv2wOOr--/c_fill,f_auto,fl_progressive,h_320,q_auto,w_320/https://thepracticaldev.s3.amazonaws.com/uploads/user/profile_image/21568/292135f9-e192-4e4c-8cc6-06c8191c1471.png" alt="Generic placeholder image">
-								<div class="media-body">
-									<p>
-										Consequat cupidatat ullamco non officia incididunt ex officia sunt mollit quis et culpa.
-									</p>
+								{% else %}
+								<div class="media single-msg">
+									<div class="media-body">
+										<p>{{ message.body }}</p>
+									</div>
+									<img class="avatar ml-3" src="{{ app.url }}/data/propic/student/53" alt="Generic placeholder image">
 								</div>
-							</div>
+								{% endif %}
+							{% endfor %}
 
 						</div>
 
