--- a/themes/default/messages/single.html
+++ b/themes/default/messages/single.html
@@ -13,33 +13,46 @@
 
                 <div class="messagessingle">
 
-                    <!-- START : HEALTH SEARCH -->
+                    <!-- START : SINGLE CONVERSATION -->
                     <h4 class="page-title">Messages</h4>
 
 					<div class="card mt-5">
 						<div class="card-header">
-							<img src="{{ app.url }}/data/propic/student/53" class="avatar">
-							<h5>
-								Srivin Prabhash
-							</h5>
+							<div class="row">
+								<div class="ml-3">
+									<a href="{{ app.url }}/{{ participant.type }}/profile/{{ participant.id }}">
+										<img src="{{ app.url }}/data/propic/{{ participant.image.path }}" class="avatar">
+									</a>
+								</div>
+								<div class="mr-auto">
+									<a href="{{ app.url }}/{{ participant.type }}/profile/{{ participant.id }}">
+										<h5>{{ participant.name }}</h5>
+									</a>
+									<h6 class="text-secondary">{{ participant.type }}</h6>
+								</div>
+							</div>
 						</div>
 
 						<div id="messages-wrapper" class="card-body">
 							
 							{% for message in messages %}
-								{% if message.owner == true %}
+								{% if message.owner == false %}
 								<div class="media single-msg incoming">
-									<img class="avatar mr-3" src="{{ app.url }}/data/propic/student/53" alt="Generic placeholder image">
-									<div class="media-body">
+									<a href="{{ app.url }}/{{ participant.type }}/profile/{{ participant.id }}">
+										<img class="avatar mr-3" src="{{ app.url }}/data/propic/{{ participant.image.path }}" alt="profile_pic" />
+									</a>
+									<div class="media-body col-6">
 										<p>{{ message.body }}</p>
 									</div>
 								</div>
 								{% else %}
 								<div class="media single-msg">
-									<div class="media-body">
-										<p>{{ message.body }}</p>
+									<div class="media-body col-4 ml-auto">
+										<p class="text-right">{{ message.body }}</p>
 									</div>
-									<img class="avatar ml-3" src="{{ app.url }}/data/propic/student/53" alt="Generic placeholder image">
+									<a href="{{ app.url }}/{{ your.type }}/profile/{{ your.id }}">
+										<img class="avatar ml-3" src="{{ app.url }}/data/propic/{{ your.image.path }}" alt="profile_pic" />
+									</a>
 								</div>
 								{% endif %}
 							{% endfor %}
@@ -48,14 +61,12 @@
 
 						<!-- CARD FOOTER -->
 						<div class="card-footer">
-							<form action="">
-								<div class="form-group">
-									<textarea class="form-control"></textarea>
-								</div>
-								<div class="form-group">
-									<button type="submit" class="btn btn-primary btn-sm"><i class="la la-paper-plane"></i> &nbsp; Send</button>
-								</div>
-							</form>
+							<div class="form-group">
+								<textarea class="form-control" id="msg"></textarea>
+							</div>
+							<div class="form-group">
+								<button type="button" class="btn btn-primary btn-sm" onclick="send_msg('{{ participant.user_id }}')"><i class="la la-paper-plane"></i> Send</button>
+							</div>
 						</div>
 
 					</div>
@@ -75,6 +86,43 @@
 		jQuery(document).ready(function($) {
 			$("#messages-wrapper").scrollTop($('#messages-wrapper')[0].scrollHeight)
 		});
+
+		// START : SEND A MESSAGE
+        send_msg = (participant_id) => {
+
+		// PAYLOAD
+		var formData = new FormData;
+
+		// ADD MESSAGE DATA
+		formData.append('participant_id', participant_id)
+		formData.append('message', $("#msg").val())
+
+		// REQUEST
+		$.ajax({
+			url: "{{ app.url }}/messages/ajax_send_msg",
+			method: 'POST',
+			data: formData,
+			processData: false,
+			contentType: false,
+			dataType: 'json',
+			success: (res) => {
+				
+				if ( res.status == 'success' ) {
+					alertify.alert("Success", "Message sent successfully ... ").set('onok', function() {
+						location.reload();
+					})
+				} else {
+					console.log(res);
+					alertify.alert("Failed", res.message);
+				}
+			},
+			error: (e) => {
+				alertify.alert("Error", "Something went wrong ... ");
+				console.log(e.responseText)
+			}
+		})
+		}
+		// END : ADD A CLASS
 
     </script>
 
