--- a/themes/default/sport/search_coach.html
+++ b/themes/default/sport/search_coach.html
@@ -94,9 +94,9 @@
                                         <th width="10%" class="text-center" scope="col">NIC</th>
                                         <th width="10%" class="text-center" scope="col">DoB</th>
                                         <th width="5%" class="text-center" scope="col">Gender</th>
-                                        <th width="5%" class="text-center" scope="col">Email</th>
                                         <th width="10%" class="text-center" scope="col">Mobile Number</th>
-                                        <th width="10%" class="text-center" scope="col">City</th>                       
+                                        <th width="10%" class="text-center" scope="col">City</th>
+                                        <th width="10%" class="text-center" scope="col">Sport</th>
                                         <th width="10%" class="text-center" scope="col">&nbsp;</th>
                                     </tr>
                                 </thead>
@@ -109,9 +109,9 @@
                                             <td class="text-center">{{ coach.nic }}</td>
                                             <td class="text-center">{{ coach.dob }}</td>
                                             <td class="text-center">{{ coach.gender }}</td>
-                                            <td class="text-center">{{ coach.email }}</td>
                                             <td class="text-center">{{ coach.phone_mobile }}</td>
                                             <td class="text-center">{{ coach.city }}</td>
+                                            <td class="text-center">{{ coach.sport }}</td>
                                             <td class="text-right"><a href="{{ app.url }}/sport/profile_coach/{{ coach.id }}"><button type="button" class="btn btn-sm btn-success"><i class="la la-user"></i> View Profile</button></a></td>
                                         </tr>
                                     {% endfor %}
