all profile delete function completed

--- a/themes/default/parents/search.html
+++ b/themes/default/parents/search.html
@@ -205,7 +205,7 @@
                                             <td class="text-center">{{ parent.mobile }}</td>
                                             <td class="text-center">{{ parent.city }}</td>                              
                                             <td class="text-right">
-                                                <a href="{{ app.url }}/parent/profile/{{ parent.id }}"><button type="button" class="btn btn-sm btn-success"><i class="la la-user"></i> View Profile</button></a>
+                                                <a href="{{ app.url }}/parents/profile/{{ parent.id }}"><button type="button" class="btn btn-sm btn-success"><i class="la la-user"></i> View Profile</button></a>
                                             </td>
                                         </tr>
                                     {% endfor %}
