--- a/themes/default/student/search.html
+++ b/themes/default/student/search.html
@@ -204,7 +204,7 @@
                                 <thead class="thead-dark">
                                     <tr>
                                         <th width="1%" class="text-center" scope="col">ID</th>
-                                        <th width="10%" class="text-center" scope="col">Admission</th>
+                                        <th width="10%" class="text-center" scope="col">Admission No</th>
                                         <th width="1%" class="text-center" scope="col">Class</th>
                                         <th width="10%" class="text-center" scope="col">DoB</th>
                                         <th width="5%" class="text-center" scope="col">Gender</th>
