message/single refresh button created

--- a/themes/default/staff/profile.html
+++ b/themes/default/staff/profile.html
@@ -24,7 +24,7 @@
                                 <div class="card">
                                     <div class="card-header">
                                         <div class="media">
-                                            <img class="mr-4 img-fluid rounded-circle img-thumbnail" width="150px" height="150px" src="{{ app.url }}/themes/{{ app.theme }}/assets/img/profile-pic.jpg">
+                                            <img class="mr-4 img-fluid rounded-circle img-thumbnail" width="150px" height="150px" src="{{ app.url }}/data/propic/staff/{{ staff.id }}">
                                             <div class="media-body align-self-center">
                                                 <h5 class="my-0">{{ staff.initials }} {{ staff.surname }}</h5>
                                                 <h6 class="my-0 text-secondary mb-2">{{ staff.type }}</h6>
