--- a/themes/default/messages/single.html
+++ b/themes/default/messages/single.html
@@ -14,9 +14,9 @@
                 <div class="messagessingle">
 
                     <!-- START : SINGLE CONVERSATION -->
-                    <h4 class="page-title">Messages</h4>
+                    <button class="btn btn-xs btn-primary" onclick="location.reload();"><i class="la la-refresh"></i> Refresh</button>
 
-					<div class="card mt-5">
+					<div class="card mt-2">
 						<div class="card-header">
 							<div class="row">
 								<div class="ml-3">
@@ -56,16 +56,13 @@
 								</div>
 								{% endif %}
 							{% endfor %}
-
 						</div>
 
 						<!-- CARD FOOTER -->
-						<div class="card-footer">
-							<div class="form-group">
+						<div class="card-footer p-0 mt-3">
+							<div class="form-group mt-1">
 								<textarea class="form-control" id="msg"></textarea>
-							</div>
-							<div class="form-group">
-								<button type="button" class="btn btn-primary btn-sm" onclick="send_msg('{{ participant.user_id }}')"><i class="la la-paper-plane"></i> Send</button>
+								<button type="button" class="btn btn-primary mt-1" onclick="send_msg('{{ participant.user_id }}')"><i class="la la-paper-plane"></i> Send</button>
 							</div>
 						</div>
 
