--- a/themes/default/common/topmenu.html
+++ b/themes/default/common/topmenu.html
@@ -25,7 +25,7 @@
                 <i class="la la-cog" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"></i>
                 
                 <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton">
-                    <li><a class="dropdown-item" href="#"> <i class="la la-user"></i>My Profile</a></li>
+                    <li><a class="dropdown-item" href="{{ app.url }}/{{ user.type }}/profile/{{ user.id }}"> <i class="la la-user"></i>My Profile</a></li>
                     <li class="dropdown-item">
                         <div class="row">
                             <div class="col align-self-center"><i class="la la-adjust"></i>Dark Mode</div>
